clean and up
