# migration-service/api/proto/chat/chat.pb.go
@@ -1,0 +1,486 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.10
+// 	protoc        v6.33.1
+// source: api/proto/chat.proto
+
+package proto
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type GetChatByIDRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetChatByIDRequest) Reset() {
+	*x = GetChatByIDRequest{}
+	mi := &file_api_proto_chat_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetChatByIDRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetChatByIDRequest) ProtoMessage() {}
+
+func (x *GetChatByIDRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_chat_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetChatByIDRequest.ProtoReflect.Descriptor instead.
+func (*GetChatByIDRequest) Descriptor() ([]byte, []int) {
+	return file_api_proto_chat_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *GetChatByIDRequest) GetId() int64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+type GetChatByIDResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Chat          *Chat                  `protobuf:"bytes,1,opt,name=chat,proto3" json:"chat,omitempty"`
+	Error         string                 `protobuf:"bytes,2,opt,name=error,proto3" json:"error,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetChatByIDResponse) Reset() {
+	*x = GetChatByIDResponse{}
+	mi := &file_api_proto_chat_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetChatByIDResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetChatByIDResponse) ProtoMessage() {}
+
+func (x *GetChatByIDResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_chat_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetChatByIDResponse.ProtoReflect.Descriptor instead.
+func (*GetChatByIDResponse) Descriptor() ([]byte, []int) {
+	return file_api_proto_chat_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GetChatByIDResponse) GetChat() *Chat {
+	if x != nil {
+		return x.Chat
+	}
+	return nil
+}
+
+func (x *GetChatByIDResponse) GetError() string {
+	if x != nil {
+		return x.Error
+	}
+	return ""
+}
+
+type CreateChatRequest struct {
+	state             protoimpl.MessageState `protogen:"open.v1"`
+	Name              string                 `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	Url               string                 `protobuf:"bytes,2,opt,name=url,proto3" json:"url,omitempty"`
+	MaxChatId         string                 `protobuf:"bytes,3,opt,name=max_chat_id,json=maxChatId,proto3" json:"max_chat_id,omitempty"`
+	Source            string                 `protobuf:"bytes,4,opt,name=source,proto3" json:"source,omitempty"`
+	ParticipantsCount int32                  `protobuf:"varint,5,opt,name=participants_count,json=participantsCount,proto3" json:"participants_count,omitempty"`
+	UniversityId      *int64                 `protobuf:"varint,6,opt,name=university_id,json=universityId,proto3,oneof" json:"university_id,omitempty"`
+	Department        string                 `protobuf:"bytes,7,opt,name=department,proto3" json:"department,omitempty"`
+	unknownFields     protoimpl.UnknownFields
+	sizeCache         protoimpl.SizeCache
+}
+
+func (x *CreateChatRequest) Reset() {
+	*x = CreateChatRequest{}
+	mi := &file_api_proto_chat_proto_msgTypes[2]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *CreateChatRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CreateChatRequest) ProtoMessage() {}
+
+func (x *CreateChatRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_chat_proto_msgTypes[2]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CreateChatRequest.ProtoReflect.Descriptor instead.
+func (*CreateChatRequest) Descriptor() ([]byte, []int) {
+	return file_api_proto_chat_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *CreateChatRequest) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *CreateChatRequest) GetUrl() string {
+	if x != nil {
+		return x.Url
+	}
+	return ""
+}
+
+func (x *CreateChatRequest) GetMaxChatId() string {
+	if x != nil {
+		return x.MaxChatId
+	}
+	return ""
+}
+
+func (x *CreateChatRequest) GetSource() string {
+	if x != nil {
+		return x.Source
+	}
+	return ""
+}
+
+func (x *CreateChatRequest) GetParticipantsCount() int32 {
+	if x != nil {
+		return x.ParticipantsCount
+	}
+	return 0
+}
+
+func (x *CreateChatRequest) GetUniversityId() int64 {
+	if x != nil && x.UniversityId != nil {
+		return *x.UniversityId
+	}
+	return 0
+}
+
+func (x *CreateChatRequest) GetDepartment() string {
+	if x != nil {
+		return x.Department
+	}
+	return ""
+}
+
+type CreateChatResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Chat          *Chat                  `protobuf:"bytes,1,opt,name=chat,proto3" json:"chat,omitempty"`
+	Error         string                 `protobuf:"bytes,2,opt,name=error,proto3" json:"error,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *CreateChatResponse) Reset() {
+	*x = CreateChatResponse{}
+	mi := &file_api_proto_chat_proto_msgTypes[3]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *CreateChatResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CreateChatResponse) ProtoMessage() {}
+
+func (x *CreateChatResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_chat_proto_msgTypes[3]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CreateChatResponse.ProtoReflect.Descriptor instead.
+func (*CreateChatResponse) Descriptor() ([]byte, []int) {
+	return file_api_proto_chat_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *CreateChatResponse) GetChat() *Chat {
+	if x != nil {
+		return x.Chat
+	}
+	return nil
+}
+
+func (x *CreateChatResponse) GetError() string {
+	if x != nil {
+		return x.Error
+	}
+	return ""
+}
+
+type Chat struct {
+	state             protoimpl.MessageState `protogen:"open.v1"`
+	Id                int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	Name              string                 `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
+	Url               string                 `protobuf:"bytes,3,opt,name=url,proto3" json:"url,omitempty"`
+	MaxChatId         string                 `protobuf:"bytes,4,opt,name=max_chat_id,json=maxChatId,proto3" json:"max_chat_id,omitempty"`
+	ParticipantsCount int32                  `protobuf:"varint,5,opt,name=participants_count,json=participantsCount,proto3" json:"participants_count,omitempty"`
+	UniversityId      *int64                 `protobuf:"varint,6,opt,name=university_id,json=universityId,proto3,oneof" json:"university_id,omitempty"`
+	Department        string                 `protobuf:"bytes,7,opt,name=department,proto3" json:"department,omitempty"`
+	Source            string                 `protobuf:"bytes,8,opt,name=source,proto3" json:"source,omitempty"`
+	CreatedAt         string                 `protobuf:"bytes,9,opt,name=created_at,json=createdAt,proto3" json:"created_at,omitempty"`
+	UpdatedAt         string                 `protobuf:"bytes,10,opt,name=updated_at,json=updatedAt,proto3" json:"updated_at,omitempty"`
+	unknownFields     protoimpl.UnknownFields
+	sizeCache         protoimpl.SizeCache
+}
+
+func (x *Chat) Reset() {
+	*x = Chat{}
+	mi := &file_api_proto_chat_proto_msgTypes[4]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *Chat) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Chat) ProtoMessage() {}
+
+func (x *Chat) ProtoReflect() protoreflect.Message {
+	mi := &file_api_proto_chat_proto_msgTypes[4]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Chat.ProtoReflect.Descriptor instead.
+func (*Chat) Descriptor() ([]byte, []int) {
+	return file_api_proto_chat_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *Chat) GetId() int64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+func (x *Chat) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *Chat) GetUrl() string {
+	if x != nil {
+		return x.Url
+	}
+	return ""
+}
+
+func (x *Chat) GetMaxChatId() string {
+	if x != nil {
+		return x.MaxChatId
+	}
+	return ""
+}
+
+func (x *Chat) GetParticipantsCount() int32 {
+	if x != nil {
+		return x.ParticipantsCount
+	}
+	return 0
+}
+
+func (x *Chat) GetUniversityId() int64 {
+	if x != nil && x.UniversityId != nil {
+		return *x.UniversityId
+	}
+	return 0
+}
+
+func (x *Chat) GetDepartment() string {
+	if x != nil {
+		return x.Department
+	}
+	return ""
+}
+
+func (x *Chat) GetSource() string {
+	if x != nil {
+		return x.Source
+	}
+	return ""
+}
+
+func (x *Chat) GetCreatedAt() string {
+	if x != nil {
+		return x.CreatedAt
+	}
+	return ""
+}
+
+func (x *Chat) GetUpdatedAt() string {
+	if x != nil {
+		return x.UpdatedAt
+	}
+	return ""
+}
+
+var File_api_proto_chat_proto protoreflect.FileDescriptor
+
+const file_api_proto_chat_proto_rawDesc = "" +
+	"\n" +
+	"\x14api/proto/chat.proto\x12\x04chat\"$\n" +
+	"\x12GetChatByIDRequest\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\"K\n" +
+	"\x13GetChatByIDResponse\x12\x1e\n" +
+	"\x04chat\x18\x01 \x01(\v2\n" +
+	".chat.ChatR\x04chat\x12\x14\n" +
+	"\x05error\x18\x02 \x01(\tR\x05error\"\xfc\x01\n" +
+	"\x11CreateChatRequest\x12\x12\n" +
+	"\x04name\x18\x01 \x01(\tR\x04name\x12\x10\n" +
+	"\x03url\x18\x02 \x01(\tR\x03url\x12\x1e\n" +
+	"\vmax_chat_id\x18\x03 \x01(\tR\tmaxChatId\x12\x16\n" +
+	"\x06source\x18\x04 \x01(\tR\x06source\x12-\n" +
+	"\x12participants_count\x18\x05 \x01(\x05R\x11participantsCount\x12(\n" +
+	"\runiversity_id\x18\x06 \x01(\x03H\x00R\funiversityId\x88\x01\x01\x12\x1e\n" +
+	"\n" +
+	"department\x18\a \x01(\tR\n" +
+	"departmentB\x10\n" +
+	"\x0e_university_id\"J\n" +
+	"\x12CreateChatResponse\x12\x1e\n" +
+	"\x04chat\x18\x01 \x01(\v2\n" +
+	".chat.ChatR\x04chat\x12\x14\n" +
+	"\x05error\x18\x02 \x01(\tR\x05error\"\xbd\x02\n" +
+	"\x04Chat\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\x12\x12\n" +
+	"\x04name\x18\x02 \x01(\tR\x04name\x12\x10\n" +
+	"\x03url\x18\x03 \x01(\tR\x03url\x12\x1e\n" +
+	"\vmax_chat_id\x18\x04 \x01(\tR\tmaxChatId\x12-\n" +
+	"\x12participants_count\x18\x05 \x01(\x05R\x11participantsCount\x12(\n" +
+	"\runiversity_id\x18\x06 \x01(\x03H\x00R\funiversityId\x88\x01\x01\x12\x1e\n" +
+	"\n" +
+	"department\x18\a \x01(\tR\n" +
+	"department\x12\x16\n" +
+	"\x06source\x18\b \x01(\tR\x06source\x12\x1d\n" +
+	"\n" +
+	"created_at\x18\t \x01(\tR\tcreatedAt\x12\x1d\n" +
+	"\n" +
+	"updated_at\x18\n" +
+	" \x01(\tR\tupdatedAtB\x10\n" +
+	"\x0e_university_id2\x92\x01\n" +
+	"\vChatService\x12B\n" +
+	"\vGetChatByID\x12\x18.chat.GetChatByIDRequest\x1a\x19.chat.GetChatByIDResponse\x12?\n" +
+	"\n" +
+	"CreateChat\x12\x17.chat.CreateChatRequest\x1a\x18.chat.CreateChatResponseB\x1eZ\x1cchat-service/api/proto;protob\x06proto3"
+
+var (
+	file_api_proto_chat_proto_rawDescOnce sync.Once
+	file_api_proto_chat_proto_rawDescData []byte
+)
+
+func file_api_proto_chat_proto_rawDescGZIP() []byte {
+	file_api_proto_chat_proto_rawDescOnce.Do(func() {
+		file_api_proto_chat_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_proto_chat_proto_rawDesc), len(file_api_proto_chat_proto_rawDesc)))
+	})
+	return file_api_proto_chat_proto_rawDescData
+}
+
+var file_api_proto_chat_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
+var file_api_proto_chat_proto_goTypes = []any{
+	(*GetChatByIDRequest)(nil),  // 0: chat.GetChatByIDRequest
+	(*GetChatByIDResponse)(nil), // 1: chat.GetChatByIDResponse
+	(*CreateChatRequest)(nil),   // 2: chat.CreateChatRequest
+	(*CreateChatResponse)(nil),  // 3: chat.CreateChatResponse
+	(*Chat)(nil),                // 4: chat.Chat
+}
+var file_api_proto_chat_proto_depIdxs = []int32{
+	4, // 0: chat.GetChatByIDResponse.chat:type_name -> chat.Chat
+	4, // 1: chat.CreateChatResponse.chat:type_name -> chat.Chat
+	0, // 2: chat.ChatService.GetChatByID:input_type -> chat.GetChatByIDRequest
+	2, // 3: chat.ChatService.CreateChat:input_type -> chat.CreateChatRequest
+	1, // 4: chat.ChatService.GetChatByID:output_type -> chat.GetChatByIDResponse
+	3, // 5: chat.ChatService.CreateChat:output_type -> chat.CreateChatResponse
+	4, // [4:6] is the sub-list for method output_type
+	2, // [2:4] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
+}
+
+func init() { file_api_proto_chat_proto_init() }
+func file_api_proto_chat_proto_init() {
+	if File_api_proto_chat_proto != nil {
+		return
+	}
+	file_api_proto_chat_proto_msgTypes[2].OneofWrappers = []any{}
+	file_api_proto_chat_proto_msgTypes[4].OneofWrappers = []any{}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_proto_chat_proto_rawDesc), len(file_api_proto_chat_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   5,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_proto_chat_proto_goTypes,
+		DependencyIndexes: file_api_proto_chat_proto_depIdxs,
+		MessageInfos:      file_api_proto_chat_proto_msgTypes,
+	}.Build()
+	File_api_proto_chat_proto = out.File
+	file_api_proto_chat_proto_goTypes = nil
+	file_api_proto_chat_proto_depIdxs = nil
+}
